fix: style issues and error modal not showing if advert is not active

--- a/src/components/Modals/ErrorModal/ErrorModal.scss
+++ b/src/components/Modals/ErrorModal/ErrorModal.scss
@@ -1,9 +1,10 @@
 .error-modal {
     width: 44rem;
     height: unset;
+    border-radius: 8px;
 
     @include mobile {
-        max-width: calc(100% - 3.2rem);
+        max-width: 34rem;
     }
 
     &__body {
